[package]
name = "webicon"
version = "0.3.3"
edition = "2021"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["web", "favicon", "scraper", "html"]
readme = "README.md"

description = "Favicon and apple-touch-icon scraper for Rust"
documentation = "https://rust-webicon.unterwaditzer.net/"
homepage = "https://rust-webicon.unterwaditzer.net/"
repository = "https://github.com/untitaker/rust-webicon"

[dependencies]
async-trait = "0.1.53"
error-chain = "0.12"
futures = "0.3"
html5ever = "0.26"
html5ever-atoms = "0.3"
image = "0.24"
mime = "0.3"
pin-utils = "0.1"
reqwest = "0.11"
scraper = "0.13.0"
url = "2.2"

[dev-dependencies]
tokio-test = "0.4"
